deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
spec:
  replicas: 4 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50% 
      maxSurge: 1  
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 8080
