service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo  
  ports:
    - protocol: TCP
      port: 8080      
      targetPort: 8080 
  type: ClusterIP
